# FastApi-NoSQL

./: README.md  pyproject.toml
app/: db.py  main.py
app/models/: product_model.py  user_models.py
app/routes/: user_routes.py
app/schemas/: user_schema.py
app/services/: user_service.py
app/tests/: test_users.py
